{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 1248,
  "lineage": "32722c0d-14ee-e55b-1fcf-036f4798d8a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "openvpn-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3309cc74dbc62f4",
            "association_id": "eipassoc-0681f6e29ac43fed5",
            "domain": "vpc",
            "id": "eipalloc-0f3309cc74dbc62f4",
            "instance": "i-0265bd22ee3dd44cf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e208649c112274b4",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "public_dns": "ec2-3-223-62-76.compute-1.amazonaws.com",
            "public_ip": "3.223.62.76",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.openvpn-team",
            "aws_key_pair.team-key",
            "aws_network_interface.openvpn-priv-interface",
            "aws_security_group.allow-openvpn",
            "aws_security_group.allow-ssh",
            "aws_subnet.team-subnet",
            "aws_vpc.team-vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn-team",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05163bdbbc24049e3",
            "arn": "arn:aws:ec2:us-east-1:785680546289:instance/i-0265bd22ee3dd44cf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0265bd22ee3dd44cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "team0-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e208649c112274b4"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e208649c112274b4",
            "private_dns": "ip-10-0-0-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-076e05d442cf29b73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a7d7b25610cd285",
            "tags": {
              "Name": "openvpn-team0"
            },
            "tags_all": {
              "Name": "openvpn-team0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009e2f87c6feaa99a",
              "sg-0e79dc9bbf6201bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.team-key",
            "aws_network_interface.openvpn-priv-interface",
            "aws_security_group.allow-openvpn",
            "aws_security_group.allow-ssh",
            "aws_subnet.team-subnet",
            "aws_vpc.team-vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "team-service1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04cbc90abb08f0321",
            "arn": "arn:aws:ec2:us-east-1:785680546289:instance/i-0c82d221a0500db01",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c82d221a0500db01",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "team0-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ee4633d50cfec17d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee4633d50cfec17d",
            "private_dns": "ip-10-0-0-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06180a6c4d80a6baa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a7d7b25610cd285",
            "tags": {
              "Name": "Team0-service1"
            },
            "tags_all": {
              "Name": "Team0-service1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-009e2f87c6feaa99a"
            ]
          },
          "dependencies": [
            "aws_key_pair.team-key",
            "aws_network_interface.service1-priv-interface",
            "aws_security_group.allow-ssh",
            "aws_subnet.team-subnet",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "team-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:internet-gateway/igw-04b166ff796555a57",
            "id": "igw-04b166ff796555a57",
            "owner_id": "785680546289",
            "tags": {
              "Provisioner": "Terraform",
              "name": "team0gateway"
            },
            "tags_all": {
              "Provisioner": "Terraform",
              "name": "team0gateway"
            },
            "vpc_id": "vpc-04c84207194280f2b"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "openvpn-priv-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:network-interface/eni-0e208649c112274b4",
            "id": "eni-0e208649c112274b4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:87:7b:83:ae:77",
            "owner_id": "785680546289",
            "private_dns_name": "ip-10-0-0-100.ec2.internal",
            "private_ip": "10.0.0.100",
            "private_ip_list": [
              "10.0.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-009e2f87c6feaa99a",
              "sg-0e79dc9bbf6201bf6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a7d7b25610cd285",
            "tags": {
              "Name": "openvpn-private-network-interface"
            },
            "tags_all": {
              "Name": "openvpn-private-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow-openvpn",
            "aws_security_group.allow-ssh",
            "aws_subnet.team-subnet",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "service1-priv-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:network-interface/eni-0ee4633d50cfec17d",
            "id": "eni-0ee4633d50cfec17d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:e8:fd:e8:cd:53",
            "owner_id": "785680546289",
            "private_dns_name": "ip-10-0-0-101.ec2.internal",
            "private_ip": "10.0.0.101",
            "private_ip_list": [
              "10.0.0.101"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-009e2f87c6feaa99a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a7d7b25610cd285",
            "tags": {
              "Name": "service1-private-interface"
            },
            "tags_all": {
              "Name": "service1-private-interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow-ssh",
            "aws_subnet.team-subnet",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "team-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:route-table/rtb-058e3246964c5cf70",
            "id": "rtb-058e3246964c5cf70",
            "owner_id": "785680546289",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b166ff796555a57",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04c84207194280f2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.team-gateway",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asoc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaae44c4bf2c1aa6",
            "route_table_id": "rtb-058e3246964c5cf70",
            "subnet_id": "subnet-02a7d7b25610cd285"
          },
          "dependencies": [
            "aws_internet_gateway.team-gateway",
            "aws_route_table.team-routetable",
            "aws_subnet.team-subnet",
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:security-group/sg-0e79dc9bbf6201bf6",
            "description": "Allow opennpn inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e79dc9bbf6201bf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              }
            ],
            "name": "allow-openvpn",
            "name_prefix": "",
            "owner_id": "785680546289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-openvpn"
            },
            "tags_all": {
              "Name": "allow-openvpn"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c84207194280f2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:security-group/sg-009e2f87c6feaa99a",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009e2f87c6feaa99a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "785680546289",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c84207194280f2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "team-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:subnet/subnet-02a7d7b25610cd285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a7d7b25610cd285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "785680546289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team0-subnet",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Name": "team0-subnet",
              "Provisioner": "Terraform"
            },
            "vpc_id": "vpc-04c84207194280f2b"
          },
          "dependencies": [
            "aws_vpc.team-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "team-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785680546289:vpc/vpc-04c84207194280f2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-071fcfec908404bc5",
            "default_route_table_id": "rtb-0f89b07b7490aa8b1",
            "default_security_group_id": "sg-0750e99502cba542d",
            "dhcp_options_id": "dopt-04c9de47498866f40",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c84207194280f2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f89b07b7490aa8b1",
            "owner_id": "785680546289",
            "tags": {
              "Name": "team0-vpc",
              "Provisioner": "Terraform"
            },
            "tags_all": {
              "Name": "team0-vpc",
              "Provisioner": "Terraform"
            }
          }
        }
      ]
    }
  ]
}